# embedded-systems-practice

./: README.md
build_flow/cmake_stage1/: README.md
build_flow/cmake_stage2/: CMakeLists.txt  README.md
build_flow/cmake_stage2/include/: helper.h
build_flow/cmake_stage2/src/: helper.c  main.c
build_flow/cmake_stage3/: CMakeLists.txt  README.md
build_flow/cmake_stage3/src/: main.c
cmake_basic_hello/: CMakeLists.txt  README.md
cmake_basic_hello/src/: main.c
